--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "lucide": "^0.544.0"
     }
 }
