--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "aos": "^2.3.4",
-        "lucide": "^0.544.0"
+        "lucide": "^0.544.0",
+        "swiper": "^12.0.1"
     }
 }
